# raar

./: .gitignore  CHANGELOG.md  LICENSE  README.md  biome.json  bun.lockb  components.json  index.html  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cast_wrapper.rs  chain_analyzer.rs  indexer.rs  main.rs
src/components/: ActionsList.tsx  AddressInfo.tsx  AdvancedSettingsDialog.tsx  BlockExplorer.tsx  BlockInfo.tsx  CallTraceTree.tsx  CallTraceVisualization.tsx  CastTool.tsx  ChainAnalyzer.tsx  ChainExtractor.tsx  ChainList.tsx  ChangesList.tsx  ContractInteraction.tsx  ContractMap.tsx  CopyableShortText.tsx  CustomNode.tsx  DataVisualizationChart.tsx  DevnetTool.tsx  ErrorBoundary.tsx  EthereumUnitConverter.tsx  FourBytes.tsx  HexConverter.tsx  IndexerTool.tsx  JsonView.tsx  KeyConverter.tsx  MultiChainGasTracker.tsx  OptionField.tsx  RPCInput.tsx  RPCTool.tsx  RefreshCountdown.tsx  Sidebar.tsx  ToolWrapper.tsx  TransactionForm.tsx  TransactionInfo.tsx  TransactionInfoCard.tsx  TransactionPool.tsx  TransactionTracer.tsx  VirtualizedChainList.tsx  VirtualizedDataTable.tsx  VirtualizedList.tsx  (+2 more)
src/components/block-explorer/: AddressView.tsx  BlockExplorer.tsx  BlockView.tsx  NetworkInfo.tsx  SearchBar.tsx  TransactionList.tsx  TransactionView.tsx  extended-client.ts
src/components/ui/: input.tsx  tabs.tsx  tooltip.tsx
src/config/: chains.ts  indexerOptions.ts  rpcToolDefaults.ts
src/store/: indexerStore.ts
src/stores/: castToolStore.ts  chainAnalyzerStore.ts  rpcToolStore.ts  transactionTracerStore.ts
src/types/: chainAnalyzer.ts  token.ts  transaction.ts
src/utils/: formatters.ts  tokenUtils.ts  transactionUtils.ts
