[package]
name = "raar"
version = "0.1.0"
description = "Raar"
authors = ["daoleno"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
    "shell-open",
    "shell-execute",
    "clipboard-write-text",
    "fs-all",
    "dialog-save",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
alloy = { version = "0.2.1", features = ["node-bindings"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
