[package]
name = "raar"
version = "0.5.1"
description = "RaaR"
authors = ["daoleno"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
    "dialog-open",
    "shell-open",
    "shell-execute",
    "clipboard-write-text",
    "fs-all",
    "dialog-save",
    "http-all",
    "devtools",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full", "sync"] }
alloy = { version = "0.2.1", features = ["node-bindings"] }
cryo_freeze = "0.3.2"
cryo_cli = "0.3.2"
log = "0.4"
env_logger = "0.10"
duckdb = { version = "1.0.0", features = ["bundled", "polars"] }
foundry-cast = { git = "https://github.com/foundry-rs/foundry.git", package = "foundry-cast" }
foundry-common = { git = "https://github.com/foundry-rs/foundry.git", package = "foundry-common" }
color-eyre = "0.6.3"
eyre = "0.6.12"
alloy-rpc-types = "0.3.6"
alloy-primitives = "0.8.3"
alloy-provider = "0.3.6"
polars = { version = "0.35.4", features = ["json", "lazy", "timezones"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
